--- a/Example/goSellSDKExample/Resources/Base.lproj/Main.storyboard
+++ b/Example/goSellSDKExample/Resources/Base.lproj/Main.storyboard
@@ -28,8 +28,30 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="GroupHeaderCell" id="0cT-6y-7Xe" customClass="GroupHeaderCell" customModule="goSellSDKExample" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0cT-6y-7Xe" id="b9O-Sx-y3l">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select item(s) from the list below:" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YAH-os-3iS">
+                                                    <rect key="frame" x="15" y="10" width="345" height="23.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="YAH-os-3iS" secondAttribute="bottom" constant="10" id="IC5-6L-9k7"/>
+                                                <constraint firstItem="YAH-os-3iS" firstAttribute="top" secondItem="b9O-Sx-y3l" secondAttribute="top" constant="10" id="Pq3-oJ-hdb"/>
+                                                <constraint firstAttribute="trailing" secondItem="YAH-os-3iS" secondAttribute="trailing" constant="15" id="qdv-eo-qrj"/>
+                                                <constraint firstItem="YAH-os-3iS" firstAttribute="leading" secondItem="b9O-Sx-y3l" secondAttribute="leading" constant="15" id="tm9-Tr-RWR"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="detailDisclosureButton" indentationWidth="10" reuseIdentifier="PaymentItemTableViewCell" rowHeight="100" id="jdv-Vh-5oh" customClass="PaymentItemTableViewCell" customModule="goSellSDKExample" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="100"/>
+                                        <rect key="frame" x="0.0" y="72" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jdv-Vh-5oh" id="5Ui-SI-K4M">
                                             <rect key="frame" x="0.0" y="0.0" width="308" height="99.5"/>
@@ -290,6 +312,27 @@
                                             <outlet property="titleTextLabel" destination="INm-Go-PYU" id="BhU-ya-sDW"/>
                                             <outlet property="totalAmountLabel" destination="4TF-qB-i2n" id="DrV-k5-GBS"/>
                                         </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PlainAmountTableViewCell" rowHeight="100" id="wss-fh-3Zy" customClass="PlainAmountTableViewCell" customModule="goSellSDKExample" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="172" width="375" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wss-fh-3Zy" id="8Xl-hb-vgp">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xsy-4C-n6A">
+                                                    <rect key="frame" x="15" y="10" width="345" height="0.0"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="xsy-4C-n6A" firstAttribute="top" secondItem="8Xl-hb-vgp" secondAttribute="top" constant="10" id="6pV-Bz-kDC"/>
+                                                <constraint firstItem="xsy-4C-n6A" firstAttribute="leading" secondItem="8Xl-hb-vgp" secondAttribute="leading" constant="15" id="J0n-w7-J6v"/>
+                                                <constraint firstAttribute="trailing" secondItem="xsy-4C-n6A" secondAttribute="trailing" constant="15" id="ia9-4b-TIE"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
